# slime

./: .gitignore  CMakeLists.txt  README.md  agents.cpp  capture.cpp  capture.hpp  cava.conf  cava.cpp  cava.hpp  cava_slow_low_volume.conf  compute_shader  compute_shader.glsl  consts.hpp  copy_shader.glsl  evaporate_shader.glsl  ffmpeg_decoder.cpp  ffmpeg_decoder.hpp  integrade_shader.hlsl  pulseAudio.cpp  pulseAudio.hpp
src/: agents.cpp  cava.cpp  compute_shader.glsl  consts.hpp  evaporate_shader.glsl  ffmpeg_decoder.cpp  ffmpeg_decoder.hpp  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp  fluid.cpp  fluid.hpp  input_pulse.cpp  input_pulse.hpp  slime.cpp  slime.hpp  spectrum.cpp  spectrum.hpp  spectrum_shader.glsl  util.cpp  util.hpp
src/shaders/: evaporate.glsl
src/shaders/fluid/: advection.glsl  cell.glsl  diffusion_finish.glsl  diffusion_step.glsl  divergence.glsl  helmholtz_finish.glsl  helmholtz_step.glsl
src/shaders/slime/: slime.glsl
src/shaders/spectrum/: spectrum.glsl
